docs: Further detail added to intro

--- a/data_analysis/results_spelling_correction_overlap_and_scores.ipynb
+++ b/data_analysis/results_spelling_correction_overlap_and_scores.ipynb
@@ -88,7 +88,14 @@
     "\n",
     "The first four datasets and their description may be found [here](https://www.dcs.bbk.ac.uk/~ROGER/corpora.html). \n",
     "\n",
-    "The last dataset, 'Zeeko', is made up of spelling mistakes written in a free form survey by school children. The surveys in their entirety may be see in [zeeko_surveys](https://github.com/robertyoung2/nlp_phoneme_spelling/tree/master/zeeko_surveys)."
+    "The last dataset, 'Zeeko', is made up of spelling mistakes written in a free form survey by school children. The surveys in their entirety may be see in [zeeko_surveys](https://github.com/robertyoung2/nlp_phoneme_spelling/tree/master/zeeko_surveys).\n",
+    "\n",
+    "For each dataset there are three key results included:\n",
+    "* Scores: the accuracy of each method on the given dataset (corrections/total_words).\n",
+    "* Overlap PySpell - the overlap of the CMU Phoneme correction method vs the [PySpell](https://norvig.com/spell-correct.html) word correction method.\n",
+    "* Overlap SymSpell - the overlap of the CMU Phoneme correction method vs the [SymSpell](symspell) word correction method.\n",
+    "\n",
+    "**NB**: the luck method for the CMU phoneme method is in a very rough form, and as such it should not be considered for dicussion/inclusion at this time."
    ]
   },
   {
