docs: Updated description and headers

--- a/data_analysis/corrected_words.ipynb
+++ b/data_analysis/corrected_words.ipynb
@@ -15,23 +15,23 @@
     "1. [Introduction](#introduction) <br/>\n",
     "2. [Holbrook Dataset Word Results](#holbrook) <br/>\n",
     "    2.1 [Holbrook Unique 'Correct' Corrections](#holbrook_correct) <br/>\n",
-    "    2.2 [Holbrook All 'Correct' Corrections](#holbrook_correct_all) <br/>\n",
+    "    2.2 [Holbrook Both 'Correct' Corrections](#holbrook_correct_all) <br/>\n",
     "    2.3 [Holbrook All Corrections](#holbrook_all) <br/>\n",
     "3. [Birkbeck Dataset Word Results](#birkbeck) <br/>\n",
     "    3.1 [Birkbeck Unique 'Correct' Corrections](#birkbeck_correct) <br/>\n",
-    "    3.2 [Birkbeck All 'Correct' Corrections](#birkbeck_correct_all) <br/>\n",
+    "    3.2 [Birkbeck Both 'Correct' Corrections](#birkbeck_correct_all) <br/>\n",
     "    3.3 [Birkbeck All Corrections](#birkbeck_all) <br/>\n",
     "4. [Zeeko Dataset Word Results](#zeeko) <br/>\n",
     "    4.1 [Zeeko Unique 'Correct' Corrections](#zeeko_correct) <br/>\n",
-    "    4.2 [Zeeko All 'Correct' Corrections](#zeeko_correct_all) <br/>\n",
+    "    4.2 [Zeeko Both 'Correct' Corrections](#zeeko_correct_all) <br/>\n",
     "    4.3 [Zeeko All Corrections](#zeeko_all) <br/>\n",
     "5. [Aspell Dataset Word Results](#aspell) <br/>\n",
     "    5.1 [Aspell Unique 'Correct' Corrections](#aspell_correct) <br/>\n",
-    "    5.2 [Aspell All 'Correct' Corrections](#aspell_correct_all) <br/>\n",
+    "    5.2 [Aspell Both 'Correct' Corrections](#aspell_correct_all) <br/>\n",
     "    5.3 [Aspell All Corrections](#aspell_all) <br/>\n",
     "6. [Wikipedia Dataset Word Results](#wiki) <br/>\n",
     "    6.1 [Wikipedia Unique 'Correct' Corrections](#wiki_correct) <br/>\n",
-    "    6.2 [Wikipedia All'Correct' Corrections](#wiki_correct_all) <br/>\n",
+    "    6.2 [Wikipedia Both'Correct' Corrections](#wiki_correct_all) <br/>\n",
     "    6.3 [Wikipedia All Corrections](#wiki_all) <br/>"
    ]
   },
@@ -46,9 +46,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook displays the results of the CMU Phoneme correction method on the five datasets used. There are two sets of corrections shown for each dataset:\n",
+    "This notebook displays the results of the CMU Phoneme correction method on the five datasets used. For each dataset there are three sets of word results that may be viewed:\n",
     "1. Unique 'correct' corrections - the phoneme sequence corrections made that were deemed correct that a given (SymSpell) traditional spell checker was unable to correct.\n",
-    "2. All 'correct' corrections - all the correct corrections made by the phoneme sequence method.\n",
+    "2. Both 'correct' corrections - the corrections that both SymSpell and CMU method share\n",
     "3. All  corrections - all data for each misspelling \n",
     "\n",
     "Columns for \"all corrections\" defined as:\n",
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 - Holbrook All 'Correct' Corrections <a name=\"holbrook_correct_all\"><a/>"
+    "### 2.2 - Holbrook Both 'Correct' Corrections <a name=\"holbrook_correct_all\"><a/>"
    ]
   },
   {
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2 - Birkbeck All 'Correct' Corrections <a name=\"birkbeck_correct_all\"><a/>"
+    "### 3.2 - Birkbeck Both 'Correct' Corrections <a name=\"birkbeck_correct_all\"><a/>"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.2 - Zeeko All 'Correct' Corrections <a name=\"zeeko_correct_all\"><a/>"
+    "### 4.2 - Zeeko Both 'Correct' Corrections <a name=\"zeeko_correct_all\"><a/>"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.2 - Aspell All 'Correct' Corrections <a name=\"aspell_correct_all\"><a/>"
+    "### 5.2 - Aspell Both 'Correct' Corrections <a name=\"aspell_correct_all\"><a/>"
    ]
   },
   {
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.2 - Wikipedia All 'Correct' Corrections <a name=\"wiki_correct_all\"><a/>"
+    "### 6.2 - Wikipedia Both 'Correct' Corrections <a name=\"wiki_correct_all\"><a/>"
    ]
   },
   {
